Fix dotted border on Firefox

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -66,6 +66,14 @@ a {
 	&:active {
 		color: #F9A825;
 	}
+	
+	&:focus {
+		outline: none;
+	}
+	
+	&::-moz-focus-inner {
+		border: 0;
+	}
 }
 
 // Images
